--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build
         run: |
           yarn run build
-          yarn run export
+          yarn run start
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
